--- a/.travis.yml
+++ b/.travis.yml
@@ -87,11 +87,27 @@ matrix:
           sources:
             - hvr-ghc
 
-    - env: TEST=STACKAGE GHC_VER=8.0.2 BUILD=STACK ARGS="--stack-yaml stack-8.0.2.yaml --system-ghc"
+    - env: TEST=STACKAGE GHC_VER=8.0.2 BUILD=STACK ARGS="--stack-yaml stack-8.0.2.yaml --system-ghc" MANUAL_INSTALL_BUILD_TOOLS=NO
       addons:
         apt:
           packages:
             - ghc-8.0.2
+          sources:
+            - hvr-ghc
+
+    - env: TEST=STACKAGE GHC_VER=7.10.3 BUILD=STACK ARGS="--stack-yaml stack-7.10.3.yaml --system-ghc" MANUAL_INSTALL_BUILD_TOOLS=YES
+      addons:
+        apt:
+          packages:
+            - ghc-7.10.3
+          sources:
+            - hvr-ghc
+    
+    - env: TEST=STACKAGE GHC_VER=7.8.4 BUILD=STACK ARGS="--stack-yaml stack-7.8.4.yaml --system-ghc" MANUAL_INSTALL_BUILD_TOOLS=YES
+      addons:
+        apt:
+          packages:
+            - ghc-7.8.4
           sources:
             - hvr-ghc
 
@@ -193,12 +209,22 @@ install:
 
 # TODO (2016-02-21): Split the long lines (`\` doesn't work).
 
+# We have to manually install `alex`, `cpphs` and possibly `happy`
+# for older snapshots because `stack` seems to have trouble installing
+# build tools for those snapshots.  Note that the version of `cpphs`
+# is currently specified in the yaml files.
+#
+# See https://github.com/commercialhaskell/stack/issues/595.
+
 # N.B. that we use the `--force-reinstalls` option [Issue 1520].
 
   - if [[ $TEST = "MAIN" || $TEST = "HADDOCK" ]]; then
        make CABAL_OPTS='--only-dependencies --force-reinstalls' install-bin;
     elif [[ $TEST = "STACKAGE" ]]; then
-         stack build $ARGS --no-terminal --test --only-dependencies;
+       if [[ $MANUAL_INSTALL_BUILD_TOOLS = "YES" ]]; then
+           stack install $ARGS --no-terminal alex cpphs happy;
+       fi;
+       stack build $ARGS --no-terminal --only-dependencies;
     fi
 
 ##############################################################################
@@ -265,8 +291,8 @@ install:
 # N.B. that this test is not include in the Makefile tests.
 
   - if [[ $TEST = "STACKAGE" ]]; then
-       stack build $ARGS --no-terminal --test --no-run-tests &&
-       stack build $ARGS --no-terminal --test --no-run-tests --flag Agda:-cpphs --flag Agda:debug --flag Agda:enable-cluster-counting;
+       stack build $ARGS --no-terminal &&
+       stack build $ARGS --no-terminal --flag Agda:-cpphs --flag Agda:debug --flag Agda:enable-cluster-counting;
     fi
 
 ##############################################################################
